centos-ansible-k8s-1.15.10/5_gateway/traefik/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.shaun.io`)
    kind: Rule
    services:
    - name: traefik-admin
      port: 8080
